--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
                         <li><a href="link/otherplantsindex.html">Accueil</a></li>
                         <li><a href="link/otherplantsindex.html#anthurium">Anthurium</a></li>
                         <li><a href="link/otherplantsindex.html#strawberry">Caladium strawberry</a></li>
+                        <li><a href="link/otherplantsindex.html#jurassica">Solanum quitoense jurassica</a></li>
                         <li><a href="link/otherplantsindex.html#sensation">Spathiphyllum sensation</a></li>
                         <li><a href="link/otherplantsindex.html#wallisii">Spathiphyllum wallisii</a></li>
                     </ul>
