--- a/link/otherplantsgallery.html
+++ b/link/otherplantsgallery.html
@@ -19,9 +19,10 @@
             </div>
             <h2 class="sub-title-gallery-category">Végétaux présents ici:
                 <a href="#anthurium">Anthurium,</a>
-                <a href="#strawberry">Caladium strawberry,</a>
-                <a href="#sensation">Spathiphyllum sensation,</a>
-                <a href="#wallisii">Spathiphyllum wallisii.</a>
+                    <a href="#strawberry">Caladium strawberry,</a>
+                    <a href="#jurassica">Solanum quitoense jurassica,</a>
+                    <a href="#sensation">Spathiphyllum sensation,</a>
+                    <a href="#wallisii">Spathiphyllum wallisii.</a>
             </h2>        
     </header>
             <hr>
@@ -49,6 +50,18 @@
         <img class="flex" src="../assets/img/otherplants/gallery/strawberry2.jpg" alt="Caladium Strawberry" title="Caladium Strawberry"/>
         <img class="flex" src="../assets/img/otherplants/gallery/strawberry3.jpg" alt="Caladium Strawberry" title="Caladium Strawberry"/>
         <img class="flex" src="../assets/img/otherplants/gallery/strawberry4.jpg" alt="Caladium Strawberry" title="Caladium Strawberry"/>
+    </section>
+            <hr>
+            <div class="species-title-gallery-category" id="jurassica">Solanum quitoense jurassica
+                <a href="otherplantsindex.html#jurassica">Voir la fiche info</a>
+            </div>
+            <hr>
+    <section>                                                                   <!-- SOLANUM QUITOENSE JURASSICA -->
+        <img class="flex" src="../assets/img/otherplants/gallery/solanumquitoensejurassica(1).jpg" alt="Solanum quitoense jurassica" title="Solanum quitoense jurassica"/>
+        <img class="flex" src="../assets/img/otherplants/gallery/solanumquitoensejurassica(2).jpg" alt="Solanum quitoense jurassica" title="Solanum quitoense jurassica"/>
+        <img class="flex" src="../assets/img/otherplants/gallery/solanumquitoensejurassica(3).jpg" alt="Solanum quitoense jurassica" title="Solanum quitoense jurassica"/>
+        <img class="flex" src="../assets/img/otherplants/gallery/solanumquitoensejurassica(4).jpg" alt="Solanum quitoense jurassica" title="Solanum quitoense jurassica"/>
+        <img class="flex" src="../assets/img/otherplants/gallery/solanumquitoensejurassica(5).jpg" alt="Solanum quitoense jurassica" title="Solanum quitoense jurassica"/>
     </section>
             <hr>
             <div class="species-title-gallery-category" id="sensation">Spathiphyllum sensation
