--- a/link/otherplantsindex.html
+++ b/link/otherplantsindex.html
@@ -20,6 +20,7 @@
                 <h2 class="sub-title-index-category">Végétaux présents ici:
                     <a href="#anthurium">Anthurium,</a>
                     <a href="#strawberry">Caladium strawberry,</a>
+                    <a href="#jurassica">Solanum quitoense jurassica,</a>
                     <a href="#sensation">Spathiphyllum sensation,</a>
                     <a href="#wallisii">Spathiphyllum wallisii.</a>
                 </h2>
@@ -69,7 +70,32 @@
             </div>
             <div class="index-category-tab-content" id="strawberry5" hidden="hidden">Je les arrose un peu moins souvent, je laisse juste le substrat sécher un peu sur le haut.
             </div>
-            <div class="index-category-tab-content" id="strawberry6" hidden="hidden">J'utilise un simple terreau pour plantes d'intérieur mélangé avec de la fibre de coco. <br/> Je la garde dans un pot de bonne taille u ses nombreuses tiges.
+            <div class="index-category-tab-content" id="strawberry6" hidden="hidden">J'utilise un simple terreau pour plantes d'intérieur mélangé avec de la fibre de coco. <br/> Je la garde dans un pot de bonne taille au vu de ses nombreuses tiges.
+            </div>
+        </section>
+        <hr>
+        <section class="index-category-system-tabs">                            <!-- SOLANUM QUITOENSE JURASSICA -->
+            <nav-tabs class="index-category-nav-tabs" id="jurassica">
+                <a href="#jurassica1" aria-selected="true">Nom</a>
+                <a href="#jurassica2">Exposition en été</a>
+                <a href="#jurassica3">Exposition en hiver</a>
+                <a href="#jurassica4">Arrosage en été</a>
+                <a href="#jurassica5">Arrosage en hiver</a>
+                <a href="#jurassica6">Rempotage</a>
+            </nav-tabs>   
+            <div class="index-category-tab-content" id="jurassica1"><span class="species">Solanum quitoense jurassica<a href="otherplantsgallery.html#jurassica">Voir la galerie photo</a></span>
+                    <img src="../assets/img/otherplants/index/solanumquitoensejurassica.jpg" alt="Solanum quitoense jurassica" title="Solanum quitoense jurassica"/>
+            </div>   
+            <div class="index-category-tab-content" id="jurassica2" hidden="hidden">Je les mets en intérieur ou dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse ou ils ne recevront aucun rayon de soleil. <br/>Je ne laisse pas dehors les nuits ou la température doit passer sous les 10°C.
+            </div>
+            <div class="index-category-tab-content" id="jurassica3" hidden="hidden">Je le place en intérieur dans une pièce ou la température ne passera pas sous les 15°C. 
+            </div>
+            <div class="index-category-tab-content" id="jurassica4" hidden="hidden">J'arrose assez souvent afin que le substrat soit toujours un peu humide. <br/>Je le fais par bassinage lorsque c'est possible ou de façon généreuse. <br/>N'aime pas l'air trop sec.
+            </div>
+            <div class="index-category-tab-content" id="jurassica5" hidden="hidden">Je les arrose un peu moins souvent, je laisse juste le substrat sécher un peu sur le haut.
+            </div>
+            <div class="index-category-tab-content" id="jurassica6" hidden="hidden">J'utilise un simple terreau pour plantes d'intérieur mélangé avec de la fibre de coco et du sable de rivière. <br/> Je les garde soit dans une jardinière en plastique à plusieurs ou en pots en plastique de taille moyenne.
+                <a class="species-repotting-info" href="repottingsolanumquitoensejurassica.html" alt="Solanum quitoense jurassica" title="Solanum quitoense jurassica">Voir comment je rempote les Solanum quitoense jurassica</a>
             </div>
         </section>
         <hr>
