--- a/modal.html
+++ b/modal.html
@@ -17,27 +17,36 @@
                     <hr>
                         <div class="modal-update-left">
                             <ul>
-                                <li>                                            <!-- 09/07/2021 -->
+                                <li>                                            <!-- 10/07/2021 -->
                                     <div class="modal-date-flex">
-                                            09/07/2021:
+                                            10/07/2021:
                                     </div>
                                     <div class="modal-desc-flex">
                                         <div>
                                             &nbsp;&nbsp;_Ajout 
-                                            <a href="link/kalanchoeindex.html#thyrsiflora" alt="Kalanchoe thyrsiflora" title="Kalanchoe thyrsiflora"><strong>Kalanchoe thyrsiflora</strong></a> (Mes Kalanchoe).<br/>
-                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingkalanchoethyrsiflora.html" alt="Rempotage Kalanchoe thyrsiflora" title="Rempotage Kalanchoe thyrsiflora"><strong>Kalanchoe thyrsiflora.</strong></a><br>
-                                            &nbsp;&nbsp;_Ajout 
                                             <a href="link/crassulaindex.html#pyramidalis" alt="Crassula pyramidalis" title="Crassula pyramidalis"><strong>Crassula pyramidalis</strong></a> (Mes Crassula).<br/>
                                             &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingcrassulapyramidalis.html" alt="Rempotage Crassula pyramidalis" title="Rempotage Crassula pyramidalis"><strong>Crassula pyramidalis.</strong></a><br>
+
                                             &nbsp;&nbsp;_Ajout 
                                             <a href="link/othersucculentsindex.html#lehmannii" alt="Corpuscularia lehmannii" title="Corpuscularia lehmannii"><strong>Corpuscularia lehmannii</strong></a> (Mes autres succulentes).<br/>
                                             &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingcorpuscularialehmannii.html" alt="Rempotage Corpuscularia lehmannii" title="Corpuscularia lehmannii"><strong>Corpuscularia lehmannii.</strong></a><br>
+
+                                            &nbsp;&nbsp;_Ajout 
+                                            <a href="link/euphorbiasindex.html#decaryi" alt="Euphorbia decaryi" title="Euphorbia decaryi"><strong>Euphorbia decaryi</strong></a> (Mes Euphorbes).<br/>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingeuphorbiadecaryi.html" alt="Rempotage Euphorbia decaryi" title="Euphorbia decaryi"><strong>Euphorbia decaryi.</strong></a><br>
+
+                                            &nbsp;&nbsp;_Ajout 
+                                            <a href="link/kalanchoeindex.html#thyrsiflora" alt="Kalanchoe thyrsiflora" title="Kalanchoe thyrsiflora"><strong>Kalanchoe thyrsiflora</strong></a> (Mes Kalanchoe).<br/>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingkalanchoethyrsiflora.html" alt="Rempotage Kalanchoe thyrsiflora" title="Rempotage Kalanchoe thyrsiflora"><strong>Kalanchoe thyrsiflora.</strong></a><br>
+
                                             &nbsp;&nbsp;_Ajout 
                                             <a href="link/mammillariaindex.html#toluca" alt="Mammillaria toluca" title="Mammillaria toluca"><strong>Mammillaria toluca</strong></a> (Mes Mammillaria).<br/>
                                             &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingmammillariatoluca.html" alt="Rempotage Mammillaria toluca" title="Rempotage Mammillaria toluca"><strong>Mammillaria toluca.</strong></a><br>
+
                                             &nbsp;&nbsp;_Ajout 
-                                            <a href="link/euphorbiasindex.html#decaryi" alt="Euphorbia decaryi" title="Euphorbia decaryi"><strong>Euphorbia decaryi</strong></a> (Mes Euphorbes).<br/>
-                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingeuphorbiadecaryi.html" alt="Rempotage Euphorbia decaryi" title="Euphorbia decaryi"><strong>Euphorbia decaryi.</strong></a>
+                                            <a href="link/otherplantsindex.html#jurassica" alt="Solanum quitoense jurassica" title="Solanum quitoense jurassica"><strong>Solanum quitoense jurassica</strong></a> (Mes Autres plantes).<br/>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingsolanumquitoensejurassica.html" alt="Rempotage Solanum quitoense jurassica" title="Rempotage Solanum quitoense jurassica"><strong>Solanum quitoense jurassica.</strong></a><br>
+
                                         </div>
                                     </div>
                                 </li>
@@ -48,6 +57,7 @@
                                     <div class="modal-desc-flex">
                                         <div>
                                             &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingaeschynanthusmarmoratus.html" alt="Rempotage Aeschynanthus marmoratus" title="Rempotage Aeschynanthus marmoratus"><strong>Aeschynanthus marmoratus.</strong></a><br>
+
                                             &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingeuphorbiainconstantia.html" alt="Rempotage Euphorbia inconstantia" title="Rempotage Euphorbia inconstantia"><strong>Euphorbia inconstantia.</strong></a>
                                         </div>
                                     </div>
@@ -61,6 +71,7 @@
                                             &nbsp;&nbsp;_Corrections erreurs de liens entre les différentes pages sur mes Lithops.<br>
                                             &nbsp;&nbsp;_Ajout 
                                             <a href="link/othercactusindex.html#cornifera" alt="Coryphanta cornifera" title="Coryphanta cornifera"><strong>Coryphanta cornifera</strong></a> (Mes Cactus).<br/>
+
                                             &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingcoryphantacornifera.html" alt="Rempotage Coryphanta cornifera" title="Rempotage Coryphanta cornifera"><strong>Coryphanta cornifera.</strong></a>
                                         </div>
                                     </div>
