--- a/link/othercactusindex.html
+++ b/link/othercactusindex.html
@@ -294,7 +294,7 @@
             </div>
             <div class="index-category-tab-content" id="azureus5" hidden="hidden">Je ne l'arrose pas du tout durant plusieurs mois sauf si je remarque qu'ils comencent à se fripper.
             </div>
-            <div class="index-category-tab-content" id="azureus6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je garnis le haut d'Akadama surtout car j'aime bien le rendu qui fait un peu désertique. <br/>Je le garde dans un pot en terre-cuite de bonne taille. <br>
+            <div class="index-category-tab-content" id="azureus6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je garnis le haut de graviers de Jura car j'aime bien le rendu qui fait un peu désertique. <br/>Je les garde dans plusieurs pots différents suivant leur nombre. <br>
                 <a class="species-repotting-info" href="repottingpilosocereusazureus.html" alt="Rempotage Pilosocereus azureus" title="Rempotage Pilosocereus azureus">Voir comment je rempote les Pilosocereus azureus</a>
                 </div>
         </section>
